deployments/k8s/fibonacci-service/fibonacci-linkerd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fibonacci-service
  labels:
    app: fibonacci-service
spec:
  type: NodePort
  selector:
    app: fibonacci-service
  ports:
    - name: http
      port: 80
      targetPort: 5002
      nodePort: 30102
      protocol: TCP
