deployments/k8s/fibonacci-service/fibonacci-virtual-service-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fibonacci-vs
spec:
  hosts:
  - "*"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: /api/fibonacci
    route:
    - destination:
        host: fibonacci-service
        port:
          number: 80
